--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "installCommand": "npx bun@1.0.30 install",
-  "headers": [
-  {
-    "source": "/(.*)",
-    "headers": [
-      { "key": "Access-Control-Allow-Credentials", "value": "true" },
-      { "key": "Access-Control-Allow-Origin", "value": "http://127.0.0.1:11434" },
-      { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-      { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-    ]
-  }
-]
+  "installCommand": "npx bun@1.0.30 install"
 }
